2021-04-13 Alibaba Cloud.
	* version: 2.6.4
	* IMPROVE: parse configuration failed because of column length is bigger
	than 4096. #582
2021-04-12 Alibaba Cloud.
	* version: 2.6.3
	* BUGFIX: ignore duplicate key error when in full sync stage. #579

2021-04-08 Alibaba Cloud.
	* version: 2.6.2
	* IMPROVE: support ssl.

2021-03-22 Alibaba Cloud.
	* version: 2.6.1
	* BUGFIX: singleWriter with wrong type 'objectId' error. #570

2021-03-22 Alibaba Cloud.
	* version: 2.6
	* replace govendor with go.mod.

2021-03-19 Alibaba Cloud.
	* version: 2.4.22
	* IMPROVE: add 'tunnel.json.format' option to let user chose json format.
	#542, #559, #558

2021-03-09 Alibaba Cloud.
	* version: 2.4.21
	* IMPROVE: remove `incr_sync.worker.oplog_compressor` option in conf.
	* IMPROVE: improve the performance of writing kafka, add
	`incr_sync.tunnel.write_thread` and `tunnel.kafka.partition_number`. #553.
	* IMPROVE: support format canonical extented JSON format. #542.

2021-03-05 Alibaba Cloud.
	* version: 2.4.20
	* IMPROVE: support aliyun_serverless of MongoDB.
	* IMPROVE: add simple python script sys test.
	* IMPROVE: update driver for some usage of mgo -> mongo.go.driver.
	* IMPROVE: comparison python script version upgrades to 3.x.

2021-01-15 Alibaba Cloud.
	* version: 2.4.19
	* BUGFIX: fix bug of cursorNotFound error. #451
	* IMPROVE: polish LOG exit mechanism. #529
	* IMPORVE: update mongo-go-driver to 1.4.4.
	* IMPROVE: polish inner debug mechanism with `full_sync.executor.debug`
	parameter in configuration.

2021-01-07 Alibaba Cloud.
	* version: 2.4.18
	* BUGFIX: remove maxWaitTime option in reader. #524

2020-12-09 Alibaba Cloud.
	* version: 2.4.17
	* IMPROVE: add write_success field in full sync log metric.
	* IMPROVE: solve dup error in single_writer which is used when target
	mongodb version is 3.0.
	* IMPROVE: show source and target db version in configuration.
	* IMPROVE: enable NoCursorTimeout when source DB version >= 3.6. #451