@@ -1,12 +1,10 @@
 package docsyncer
 
 import (
+	"context"
 	"fmt"
 	conf "github.com/alibaba/MongoShake/v2/collector/configure"
 	utils "github.com/alibaba/MongoShake/v2/common"
-	"math"
-
-	"context"
 	"sync/atomic"
 
 	LOG "github.com/vinllen/log4go"
@@ -24,7 +22,7 @@ type DocumentSplitter struct {
 	ns            utils.NS             // namespace
 	conn          *utils.MongoConn     // connection
 	readerChan    chan *DocumentReader // reader chan
-	pieceSize     uint64               // each piece max size
+	pieceByteSize uint64               // each piece max byte size
 	count         uint64               // total document number
 	pieceNumber   int                  // how many piece
 }
@@ -34,7 +32,6 @@ func NewDocumentSplitter(src, sslRootCaFile string, ns utils.NS) *DocumentSplitt
 		src:           src,
 		sslRootCaFile: sslRootCaFile,
 		ns:            ns,
-		pieceSize:     conf.Options.FullSyncReaderReadDocumentCount,
 	}
 
 	// create connection
@@ -48,20 +45,27 @@ func NewDocumentSplitter(src, sslRootCaFile string, ns utils.NS) *DocumentSplitt
 	}
 
 	// get total count
-	count, err := ds.conn.Session.DB(ds.ns.Database).C(ds.ns.Collection).Count()
-	if err != nil {
+	var res struct {
+		Count       int64   `bson:"count"`
+		Size        float64 `bson:"size"`
+		StorageSize float64 `bson:"storageSize"`
+	}
+	if err := ds.conn.Session.DB(ds.ns.Database).Run(bson.M{"collStats": ds.ns.Collection}, &res); err != nil {
 		LOG.Error("splitter[%s] connection mongo[%v] failed[%v]", ds,
 			utils.BlockMongoUrlPassword(ds.src, "***"), err)
 		return nil
 	}
-	ds.count = uint64(count)
+	ds.count = uint64(res.Count)
+	ds.pieceByteSize = uint64(res.Size / float64(conf.Options.FullSyncReaderParallelThread))
+	if ds.pieceByteSize > 8*utils.GB {
+		// at most 8GB per chunk
+		ds.pieceByteSize = 8 * utils.GB
+	}
 
-	if ds.pieceSize <= 0 {
-		ds.pieceNumber = 1
+	if conf.Options.FullSyncReaderParallelThread <= 1 {
 		ds.readerChan = make(chan *DocumentReader, 1)
 	} else {
-		ds.pieceNumber = int(math.Ceil(float64(ds.count) / float64(ds.pieceSize)))
-		ds.readerChan = make(chan *DocumentReader, SpliterReader)
+		ds.readerChan = make(chan *DocumentReader, 4196)
 	}
 
 	go func() {
@@ -77,8 +81,8 @@ func (ds *DocumentSplitter) Close() {
 }
 
 func (ds *DocumentSplitter) String() string {
-	return fmt.Sprintf("DocumentSplitter src[%s] ns[%s] count[%v] pieceSize[%v] pieceNumber[%v]",
-		utils.BlockMongoUrlPassword(ds.src, "***"), ds.ns, ds.count, ds.pieceSize, ds.pieceNumber)
+	return fmt.Sprintf("DocumentSplitter src[%s] ns[%s] count[%v] pieceByteSize[%v MB] pieceNumber[%v]",
+		utils.BlockMongoUrlPassword(ds.src, "***"), ds.ns, ds.count, ds.pieceByteSize/utils.MB, ds.pieceNumber)
 }
 
 // TODO, need add retry
@@ -87,52 +91,91 @@ func (ds *DocumentSplitter) Run() error {
 	defer close(ds.readerChan)
 
 	// disable split
-	if ds.pieceNumber == 1 {
+	if conf.Options.FullSyncReaderParallelThread <= 1 {
 		LOG.Info("splitter[%s] disable split or no need", ds)
-		ds.readerChan <- NewDocumentReader(ds.src, ds.ns, nil, nil, ds.sslRootCaFile)
+		ds.readerChan <- NewDocumentReader(0, ds.src, ds.ns, "", nil, nil, ds.sslRootCaFile)
 		LOG.Info("splitter[%s] exits", ds)
 		return nil
 	}
 
-	LOG.Info("splitter[%s] enable split: piece size[%v], count[%v]", ds, ds.pieceSize, ds.count)
+	LOG.Info("splitter[%s] enable split, waiting splitVector return...", ds)
 
-	var start interface{}
-	// cut into piece
-	cnt := ds.count
-	for i := 0; cnt > 0; i++ {
-		result := make(bson.M)
-		// current window size
-		windowSize := ds.pieceSize
-		if cnt < windowSize {
-			windowSize = cnt
-		}
-
-		query := make(bson.M)
-		if start != nil {
-			query["_id"] = bson.M{"$gt": start}
-		}
-
-		// find the right boundary. the parameter of Skip() is int, what if overflow?
-		err := ds.conn.Session.DB(ds.ns.Database).C(ds.ns.Collection).Find(query).Sort("_id").
-			Skip(int(windowSize - 1)).Limit(1).One(&result)
-		if err != nil {
-			return fmt.Errorf("splitter[%s] piece[%d] with query[%v] and skip[%v] fetch boundary failed[%v]",
-				ds, i, query, windowSize-1, err)
-		}
-
-		end := result["_id"]
-
-		LOG.Info("splitter[%s] piece[%d] create reader with boundary(%v, %v]", ds, i, start, end)
-		// inject new DocumentReader into channel
-		ds.readerChan <- NewDocumentReader(ds.src, ds.ns, start, end, ds.sslRootCaFile)
-
-		// new start
-		start = end
-		cnt -= windowSize
+	var res bson.M
+	err := ds.conn.Session.DB(ds.ns.Database).Run(bson.D{
+		{"splitVector", ds.ns.Str()},
+		{"keyPattern", bson.M{conf.Options.FullSyncReaderParallelIndex: 1}},
+		// {"maxSplitPoints", ds.pieceNumber - 1},
+		{"maxChunkSize", ds.pieceByteSize / utils.MB},
+	}, &res)
+	// if failed, do not panic, run single thread fetching
+	if err != nil {
+		LOG.Warn("splitter[%s] run splitVector failed[%v], give up parallel fetching", ds, err)
+		ds.readerChan <- NewDocumentReader(0, ds.src, ds.ns, "", nil, nil, ds.sslRootCaFile)
+		LOG.Info("splitter[%s] exits", ds)
+		return nil
 	}
+
+	LOG.Info("splitter[%s] run splitVector result: %v", ds, res)
+
+	if splitKeys, ok := res["splitKeys"]; ok {
+		if splitKeysList, ok := splitKeys.([]interface{}); ok && len(splitKeysList) > 0 {
+			// return list is sorted
+			ds.pieceNumber = len(splitKeysList) + 1
+
+			var start interface{}
+			cnt := 0
+			for i, keyDoc := range splitKeysList {
+				// check key == conf.Options.FullSyncReaderParallelIndex
+				key, val, err := parseDocKeyValue(keyDoc)
+				if err != nil {
+					LOG.Crash("splitter[%s] parse doc key failed: %v", ds, err)
+				}
+				if key != conf.Options.FullSyncReaderParallelIndex {
+					LOG.Crash("splitter[%s] parse doc invalid key: %v", ds, key)
+				}
+
+				LOG.Info("splitter[%s] piece[%d] create reader with boundary(%v, %v]", ds, cnt, start, val)
+				// inject new DocumentReader into channel
+				ds.readerChan <- NewDocumentReader(cnt, ds.src, ds.ns, key, start, val, ds.sslRootCaFile)
+
+				// new start
+				start = val
+				cnt++
+
+				// last one
+				if i == len(splitKeysList)-1 {
+					LOG.Info("splitter[%s] piece[%d] create reader with boundary(%v, INF)", ds, cnt, start)
+					// inject new DocumentReader into channel
+					ds.readerChan <- NewDocumentReader(cnt, ds.src, ds.ns, key, start, nil, ds.sslRootCaFile)
+				}
+			}
+
+			return nil
+		} else {
+			LOG.Warn("splitter[%s] run splitVector return empty result[%v]", ds, res)
+		}
+	} else {
+		LOG.Warn("splitter[%s] run splitVector return null result[%v]", ds, res)
+	}
+
+	LOG.Warn("splitter[%s] give up parallel fetching", ds, err)
+	ds.readerChan <- NewDocumentReader(0, ds.src, ds.ns, "", nil, nil, ds.sslRootCaFile)
+	LOG.Info("splitter[%s] exits", ds)
 
 	LOG.Info("splitter[%s] exits", ds)
 	return nil
+}
+
+func parseDocKeyValue(x interface{}) (string, interface{}, error) {
+	keyDocM := x.(bson.M)
+	if len(keyDocM) > 1 {
+		return "", nil, fmt.Errorf("invalid key doc[%v]", keyDocM)
+	}
+	var key string
+	var val interface{}
+	for key, val = range keyDocM {
+	}
+	return key, val, nil
 }
 
 // @deprecated
@@ -161,10 +204,12 @@ type DocumentReader struct {
 
 	// query statement and current max cursor
 	query bson.M
+	key   string
+	id    int
 }
 
 // NewDocumentReader creates reader with mongodb url
-func NewDocumentReader(src string, ns utils.NS, start, end interface{}, sslRootCaFile string) *DocumentReader {
+func NewDocumentReader(id int, src string, ns utils.NS, key string, start, end interface{}, sslRootCaFile string) *DocumentReader {
 	q := make(bson.M)
 	if start != nil || end != nil {
 		innerQ := make(bson.M)
@@ -174,22 +219,24 @@ func NewDocumentReader(src string, ns utils.NS, start, end interface{}, sslRootC
 		if end != nil {
 			innerQ["$lte"] = end
 		}
-		q["_id"] = innerQ
+		q[key] = innerQ
 	}
 
 	ctx := context.Background()
 
 	return &DocumentReader{
+		id:            id,
 		src:           src,
 		ns:            ns,
 		sslRootCaFile: sslRootCaFile,
 		query:         q,
+		key:           key,
 		ctx:           ctx,
 	}
 }
 
 func (reader *DocumentReader) String() string {
-	ret := fmt.Sprintf("DocumentReader src[%v] ns[%s] query[%v]",
+	ret := fmt.Sprintf("DocumentReader id[%v], src[%v] ns[%s] query[%v]", reader.id,
 		utils.BlockMongoUrlPassword(reader.src, "***"), reader.ns, reader.query)
 	if reader.docCursor != nil {
 		ret = fmt.Sprintf("%s docCursorId[%v]", ret, reader.docCursor.ID())
