@@ -5,7 +5,7 @@
 
 # current configuration version, do not modify.
 # 当前配置文件的版本号，请不要修改该值。
-conf.version = 9
+conf.version = 10
 
 # --------------------------- global configuration ---------------------------
 # collector name
@@ -194,12 +194,15 @@ full_sync.reader.write_document_parallel = 8
 # number of documents in a batch insert in a document concurrence
 # 目的端写入的batch大小，例如，128表示一个线程将会一次聚合128个文档然后再写入。
 full_sync.reader.document_batch_size = 128
-# number of documents reading in single reader thread.
-# do not enable when the _id has more than one type: e.g., ObjectId, string.
-# 用于单表倾斜的优化，单个拉取线程读取的最多的文档数，默认0表示拉取是单线程拉取，非0情况下必须>=10000。
-# 例如，表内有50000文档，设置10000则读取段拉取为5个线程（建议并发在1-32个线程）。
-# 注意：对单个表来说，仅支持_id对应的value是同种类型，如果有不同类型请勿启用该配置项！
-full_sync.reader.read_document_count = 0
+# max number of fetching thread per table. default is 1
+# 单个表最大拉取的线程数，默认是单线程拉取。需要具备splitVector权限。
+# 注意：对单个表来说，仅支持索引对应的value是同种类型，如果有不同类型请勿启用该配置项！
+full_sync.reader.parallel_thread = 1
+# the parallel query index if set full_sync.reader.parallel_thread. index should only has
+# 1 field.
+# 如果设置了full_sync.reader.parallel_thread，还需要设置该参数，并行拉取所扫描的index，value
+# 必须是同种类型。对于副本集，建议设置_id；对于集群版，建议设置shard_key。key只能有1个field。
+full_sync.reader.parallel_index = _id
 
 # drop the same name of collection in dest mongodb in full synchronization
 # 同步时如果目的库存在，是否先删除目的库再进行同步，true表示先删除再同步，false表示不删除。
