@@ -2,6 +2,10 @@
 	* version: 2.6.4
 	* IMPROVE: parse configuration failed because of column length is bigger
 	than 4096. #582
+	* IMPROVE: use splitVector command to split table and then support
+	parallel fetching in full sync stage. remove
+	'full_sync.reader.read_document_count' in configuration file.
+
 2021-04-12 Alibaba Cloud.
 	* version: 2.6.3
 	* BUGFIX: ignore duplicate key error when in full sync stage. #579
